--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,5 +10,6 @@ authors = ["Afta Dizca Wahana"]
 image = "0.23.14"
 rust-embed = "6.0.0"
 glob = "0.3.0"
-hyper = { version = "0.14", features = ["full"] }
 tokio = { version = "1", features = ["full"] }
+serde_json = "1.0.66"
+reqwest = {version = "0.11.4", features = ["blocking"]}
