--- a/config.toml
+++ b/config.toml
@@ -18,5 +18,8 @@ query = """
 url = "https://graphql.anilist.co/"
 
 [img]
+# example : "src\\img\\bottom.png"
 bottom = "src\\img\\bottom.png"
 top = "src\\img\\top.png"
+# [W,H,X,Y]
+coordinate=[149,211,31,16]
