--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,10 @@ tokio = { version = "1", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.66"
 reqwest = {version = "0.11.4", features = ["blocking"]}
+terminal-spinners = "0.3.1"
+
+[profile.release]
+opt-level = 'z'     # Optimize for size.
+lto = true          # Enable Link Time Optimization
+codegen-units = 1   # Reduce number of codegen units to increase optimizations.
+panic = 'abort'     # Abort on panic
