--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,9 +14,11 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.66"
 reqwest = {version = "0.11.4", features = ["blocking"]}
 terminal-spinners = "0.3.1"
+log = "0.4"
+log4rs = "1"
 
 [profile.release]
 opt-level = 'z'     # Optimize for size.
 lto = true          # Enable Link Time Optimization
 codegen-units = 1   # Reduce number of codegen units to increase optimizations.
-panic = 'abort'     # Abort on panic
+# panic = 'abort'     # Abort on panic
