--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,4 +21,4 @@ log4rs = "1"
 opt-level = 'z'     # Optimize for size.
 lto = true          # Enable Link Time Optimization
 codegen-units = 1   # Reduce number of codegen units to increase optimizations.
-# panic = 'abort'     # Abort on panic
+panic = 'abort'     # Abort on panic
