--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,7 +2,7 @@
 	"version": "2.0.0",
 	"tasks": [
 		{
-			"label": "cargo release npx",
+			"label": "cargo release npx windows",
 			"type": "shell",
 			"group": "build",
 			"windows":{
@@ -10,6 +10,19 @@
 			},
 			"linux":{
 				"command": "cargo +nightly build --release --target x86_64-pc-windows-gnu && upx --best --lzma ${workspaceFolder}/target/x86_64-pc-windows-gnu/release/ico-generator.exe"
+				// "command": "cargo build --release --target x86_64-pc-windows-gnu && cargo strip --target x86_64-pc-windows-gnu && upx --best --lzma ${workspaceFolder}/target/x86_64-pc-windows-gnu/release/ico-generator.exe"
+			},
+			
+		},
+		{
+			"label": "cargo release npx linux",
+			"type": "shell",
+			"group": "build",
+			"windows":{
+				"command": "cargo build --release | E:\\App\\upx-3.96-win64\\upx.exe --best --lzma ${workspaceFolder}\\target\\release\\ico-generator.exe"
+			},
+			"linux":{
+				"command": "cargo +nightly build --release && upx --best --lzma ${workspaceFolder}/target/release/ico-generator"
 				// "command": "cargo build --release --target x86_64-pc-windows-gnu && cargo strip --target x86_64-pc-windows-gnu && upx --best --lzma ${workspaceFolder}/target/x86_64-pc-windows-gnu/release/ico-generator.exe"
 			},
 			
