--- a/config.toml
+++ b/config.toml
@@ -19,7 +19,7 @@ url = "https://graphql.anilist.co/"
 
 [img]
 # example : "src/img/bottom.png"
-bottom = "src/img/bottom.png"
+bottom = "src/img/lbottom.png"
 top = "src/img/top.png"
 # [W,H,X,Y]
 coordinate=[149,211,31,16]
